# multi-cloud-tag-policy

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: resources.json
n8n/: tag-policy-review-workflow.json
social/: email-summary.md  linkedin-post.md  medium-ready.md
src/multi_cloud_tag_policy/: __init__.py  cli.py  engine.py
tests/: test_engine.py
