[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-cloud-tag-policy"
version = "1.0.0"
description = "Deterministic approval-first tag policy auditor for AWS, Azure, and Google Cloud inventories"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jeffrey Ikuoyemwen" }]

[project.scripts]
multi-cloud-tag-audit = "multi_cloud_tag_policy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

